kubernetes-deployments/services/nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: nginx.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
